--- a/Index.html
+++ b/Index.html
@@ -31,12 +31,12 @@
 </div>
 <!--Галерея достижений-->
 <div id="gallery">
-    <img src="star_gray.png" alt="сотрудник года" title="Сотрудник года" class="logo_gallery">
-    <img src="star_gray.png" alt="Отработанное время" class="logo_gallery" title="Максимально отработанное время">
-    <img src="star_gray.png" alt="Показатель 3" class="logo_gallery" title="Показатель 3">
-    <img src="star_gray.png" alt="Показатель 4" class="logo_gallery" title="Показатель 4">
-    <img src="star_gray.png" alt="Показатель 5" class="logo_gallery" title="Показатель 5">
-    <img src="star_gray.png" alt="Показатель 6" class="logo_gallery" title="Показатель 6">
+    <img src="star_gray.jpg" alt="сотрудник года" title="Сотрудник года" class="logo_gallery">
+    <img src="star_gray.jpg" alt="Отработанное время" class="logo_gallery" title="Максимально отработанное время">
+    <img src="star_gray.jpg" alt="Показатель 3" class="logo_gallery" title="Показатель 3">
+    <img src="star_gray.jpg" alt="Показатель 4" class="logo_gallery" title="Показатель 4">
+    <img src="star_gray.jpg" alt="Показатель 5" class="logo_gallery" title="Показатель 5">
+    <img src="star_gray.jpg" alt="Показатель 6" class="logo_gallery" title="Показатель 6">
 </div>
 <!--Пргресс достижений-->
 <div id="progress_bar_global">
